questions overlap fix

--- a/src/pages/Questions/styles.module.scss
+++ b/src/pages/Questions/styles.module.scss
@@ -47,6 +47,10 @@
       max-width: 100vw;
     }
 
+    .choiceWrapper {
+      margin: auto 0;
+    }
+
     .choiceContainer {
       font-size: 4vh;
       display: flex;
@@ -147,6 +151,10 @@
       font-size: 4vh;
       padding-bottom: 25px;
       max-width: 100vw;
+    }
+
+    .choiceWrapper {
+      margin: auto 0;
     }
 
     .choiceContainer {
@@ -251,6 +259,10 @@
       font-size: 4vh;
       padding-bottom: 25px;
       max-width: 100vw;
+    }
+
+    .choiceWrapper {
+      margin: auto 0;
     }
 
     .choiceContainer {
